# rumo

./: .gitignore  CLAUDE.md  Juritis LegalDesk API.postman_collection.json  PROJECT_STATUS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth_router.py  budget_router.py  clients_router.py  closing_router.py  deps.py  ingest_router.py  manual_router.py  providers.py
backend/app/auth/: passwords.py  tokens.py
backend/app/budget/: models.py  (+2 more)
backend/scripts/: build_may_comparison.py  build_workbook_targets.py  import_budget.py  import_ledger.py  seed.py
backend/tests/: conftest.py  fakes.py  test_area_transfers.py  test_auth_api.py  test_available.py  test_budget_api.py  test_budget_source.py  test_budget_workbook_import.py  test_clients_api.py  test_closing_api.py  test_closing_builder.py  test_closing_provider.py  test_comissao_deriv.py  test_config.py  test_custo_equipe_deriv.py  test_deps.py  test_despesas_liquido.py  test_dre_assembler.py  test_fake_repo.py  test_faturas_analitico.py  test_faturas_moeda.py  test_fixture_repo_toggle.py  test_fixture_source.py  test_health.py  test_ingest_api.py  test_juritis_placeholder.py  test_ledger_import.py  test_legaldesk_source.py  test_manual_actuals.py  test_manual_api.py  test_meta_tab.py  test_models.py  test_passwords.py  test_period.py  test_sisjuri_db_source.py  test_snapshot_store.py  test_sources_base.py  test_supabase_repo_mapping.py  test_supabase_snapshot_store.py  test_tokens.py  (+3 more)
(+1599 files in other folders)
