[project]
name = "rumo-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "requests>=2.31",
  "passlib[argon2]>=1.7.4",
  "pyjwt>=2.8",
  "supabase>=2.4",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.4", "mypy>=1.10", "types-passlib"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
